Fixes for menu on mobile.

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -222,6 +222,11 @@ dt {
     padding-top: 2em;
   }
 }
+
+.menu-shadow {
+  text-shadow: 0px 0px 2px rgba(12, 77, 120, 0.7);
+}
+
 .fixed-menu {
   position: fixed;
   top: 0px;
@@ -233,34 +238,34 @@ dt {
     width: 100%;
   }
 }
+
+.fixed-menu ul {
+  @include breakpoint(medium down) {
+    left: 0;
+    top: 0;
+    z-index: -10;
+    width: 100%;
+    padding-top: 2.1em;
+    padding-bottom: 0.8em;
+    position: absolute;
+    margin-left: 0 !important;
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+}
   .fixed-menu .menu {
     float: left;
     margin-left: 20px;
   }
 
-
-  .fixed-menu ul {
-    @include breakpoint(medium down) {
-      left: 0;
-      top: 0;
-      z-index: -10;
-      width: 100%;
-      padding-top: 2.1em;
-      padding-bottom: 0.8em;
-      position: absolute;
-      margin-left: 0 !important;
-      padding-left: 1em;
-      padding-right: 1em;
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-  }
-
   .fixed-menu .menu li {
-    // border-bottom: 1px solid #fff;
     text-transform: uppercase;
     font-weight: bold;
     margin-bottom: 3px;
+    @extend .menu-shadow;
   }
+
     .fixed-menu .menu li.menu_divider {
       border-bottom: none;
       height: 1em;
@@ -268,9 +273,10 @@ dt {
         height: 1.5em;
       }
     }
-    .fixed-menu .menu li.menu_divider::after {
-      background: none;
-    }
+      .fixed-menu .menu li.menu_divider::after {
+        background: none;
+      }
+
     .fixed-menu .menu li a {
       color: #fff;
       padding: 0.3rem 0;
@@ -280,18 +286,7 @@ dt {
         font-size: 1.4em;
       }
     }
-    .fixed-menu .menu li:first-child {
-      border-bottom: none;
-      margin-bottom: 20px;
-    }
-    .fixed-menu .menu li:last-child {
-      border-bottom: none;
-      margin-top: 1em;
-      @include breakpoint(medium down) {
-        margin-top: 1.5em;
-      }
-    }
-    .fixed-menu .menu li:first-child::after,
+
     .fixed-menu .menu li:last-child::after {
       background: none;
     }
@@ -313,9 +308,10 @@ dt {
   font-weight: bold;
   float: left;
   line-height: 1;
-  height: 32px;
+  height: 0.5em;
   @include breakpoint(medium down) {
-    text-shadow: 0px 0px 26px rgba(12, 77, 120, 0.6);
+    display: block;
+    width: 100%;
   }
 }
 
